2009-02-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm (xsdoc2pod): Instead of relying on one final '=cut',
	close every opened POD paragraph separately.  This fixes POD
	errors that occurred when '=for position COPYRIGHT' was used.
	Original patch by Ryan Niebur.

2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBookmarkFile.xs: Don't document Glib::BookmarkFile::set_added,
	set_modified, and set_visited as functions; they're methods.

	* t/h.t: Test Glib::BookmarkFile::set_added, set_modified, and
	set_visited and their associated getters.

2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: Use an '=encoding utf8' directive for the AUTHORS POD
	section so that non-ASCII characters are handled correctly.

2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.213.

2009-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GError.xs: Document that Glib::Error->location returns raw
	bytes.  Patch by Kevin Ryde.

2009-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: In the documentation for filename_from_uri, hint at
	path separator issue.  Patch by Kevin Ryde.

2009-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GOption.xs (copy_string): Fix C99-ism.  Patch by Kevin Ryde.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/filename.t: Test Glib->filename_to_uri with hostname == undef.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm: Deprecate
	Glib::MakeHelper->get_configure_requires_yaml in favor of EU::MM's
	new META_MERGE and META_ADD features.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Unconditionally use META_MERGE; so you now need
	ExtUtils::MakeMaker >= 6.46 to roll a Glib tarball with a proper
	META.yml.  Also, tell the CPAN indexer (via META.yml) to not index
	xsapi.pod.head and xsapi.pod.foot.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>
